--- a/snake.html
+++ b/snake.html
@@ -1,12 +1,14 @@
 <html>
     <head>
         <title>Snake Game</title>
-        
+        <link rel="stylesheet" type="text/css" href="snake.css">
     </head>
     <body>
-        <h1>This is a snake game</h1>
-        <h2>Subscribe to website.</h2>
-        <canvas id="canvas" width="700" height="700"></canvas>
+        
+        <h1 id="TitleText">This is a snake game</h1>
+        <h2 id="TitleText">Subscribe to website.</h2>
+        <h3 id="randomtext"></h3>
+        <canvas id="Canvas" width="700" height="700"></canvas>
         <script src="game.js"></script>
     </body>
 </html>
